--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
+    "yup": "^1.3.2",
     "zustand": "^4.4.6"
   },
   "scripts": {
